--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <title>List</title>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 <body>
-    <h1>BooksHTML</h1>
+
+    <div class="container">
+        <h2 class="modal-header">書單列表</h2>
+        <p class="text-end"><a href="./input.html" th:href="@{/books/input}" class="btn btn-primary ">新增</a></p>
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>書名</th>
+                <th>作者</th>
+                <th>說明</th>
+                <th>狀態</th>
+            </tr>
+            </thead>
+            <tbody>
+            <!--
+                iterStat.
+                    count:計數 (1開始)
+                    index:索引 (0開始)
+                    size: 獲取到的總數
+                    even/odd: 奇數/偶數 回傳boolean
+                    first/last: 第一/最後一條 回傳boolean
+                        -->
+            <!--迭代(each) iter(名稱自訂)=獲得foreach中的i -->
+            <tr th:each="book,iter:${books}" th:class="${iter.even} ? 'bg-gradient' : 'bg-light'">
+                <td th:text="${iter.count}">1</td>
+<!--                <td ><a href="#" th:text="${book.name}" th:href="@{/books/{id}(id=${book.id})}">書名</a></td>-->
+                <td ><a href="#" th:text="${book.name}" th:href="@{'/books/' + ${book.id}}">書名</a></td>
+                <td th:text="${book.author}">作者</td>
+                <td th:text="${book.description}">說明</td>
+                <td th:switch="${book.status}">
+                    <span th:case="0">想讀</span>
+                    <span th:case="1">在讀</span>
+                    <span th:case="2">已讀</span>
+                    <span th:case="*">默認狀態</span>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
 </html>
